--- a/ist263-talley.css
+++ b/ist263-talley.css
@@ -5,7 +5,7 @@
   #nav-column a:link, #nav-column a:visited {color: #D44500; font-weight: 500; text-decoration: none; border: none; margin-left: 0;}
   #nav-column a:hover, #nav-column a:active {color: #6F777D; font-weight: 500; text-decoration: underline; border: none; margin-left: 0;}
   #page-body {width: 78%; float:right; background-color: #f1f1f1; padding: 0.5em;}
-  #header-panel {width: 80%; background-color: #fff; margin: 0 auto; padding: 1em; text-align: center;}
+  #header-panel {width: 80%; background-color: #fff; margin: 1em; padding: 1em; text-align: center;}
   #header-panel h1 {font-family: Goudy, Times Roman, serif; font-size: 3em; line-height: 3em; text-align: center;  color: #D44500; padding: 0;}
   #header-panel p {font-family: Goudy, Times Roman, serif; font-size: 2em; line-height: 2em; text-align: center; padding: 0; color:  #6F777D;}
   footer {width: 100%; clear: both; padding: 2em; text-align: center;}
