--- a/ist263-talley.css
+++ b/ist263-talley.css
@@ -1,6 +1,6 @@
 <style>
   #page-container {max-width:1024px; margin: 0 auto; font-family: Helvetica, Arial, sans-serif; color: #3E3D3C; padding: 0.5em;}
-#top-banner {width: 100%; min-height: 40px; background-color: #D44500;}
+#top-banner {width: 100%; min-height: 8em; background-color: #6F777D;}
 #top-banner img {max-height: 90%; padding: 0 1em 0 0;}
 #logo-container {display: inline-block; padding: 0.25em; background-color: #fff;}
   #nav-column {width:18%; float:left; padding: 5px; background-color: #f1f1f1; }
