--- a/ist263-talley.css
+++ b/ist263-talley.css
@@ -23,5 +23,7 @@
   a {color: #D44500; text-decoration: none;}
   a:link, a:visited {color: #D44500; font-weight: 600; text-decoration: none; border-bottom: 1px dashed;}
   a:hover, a:active {color: #6F777D; text-decoration: none; border-bottom: 1px solid;}
+#top-banner a:link, a:visited {border: none;}
+#top-banner a:hover, a:active {border: none;}
   code {font-family: "Courier New", Courier, monospace; font-size: 1em;}
 </style>
